force-app/main/default/objects/Anon_Object_Config__mdt/Anon_Object_Config__mdt.object-meta.xml
<CustomObject>
    <label>Anonymization Object Config</label>
    <pluralLabel>Anonymization Object Configs</pluralLabel>
</CustomObject>