force-app/main/default/objects/Anon_Object_Config__mdt/fields/Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Batch_Size__c</fullName>
    <label>Batch Size</label>
    <description>Number of records processed per batch execution. Defaults to 200 if blank. Reduce for objects with many fields or complex strategies to avoid CPU/heap governor limits.</description>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>