force-app/main/default/objects/Anon_Object_Config__mdt/fields/Brand_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Brand_Field_API_Name__c</fullName>
    <label>Brand Filter Field API Name</label>
    <description>API name of the field that holds the Brand/Subsidiary value on this object (e.g. Brand__c, Division__c). Used to scope the anonymization to a specific brand when the admin provides a brand filter in the UI.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>