force-app/main/default/objects/Anon_Object_Config__mdt/fields/Condition_Field__c.field-meta.xml
<CustomField>
    <fullName>Condition_Field__c</fullName>
    <label>Condition Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>