force-app/main/default/objects/Anon_Object_Config__mdt/fields/Execution_Order__c.field-meta.xml
<CustomField>
    <fullName>Execution_Order__c</fullName>
    <label>Execution Order</label>
    <description>Controls the order in which objects are processed when running a full anonymization. Lower numbers run first. Use to respect object dependencies (e.g. process Account before Contact).</description>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>