force-app/main/default/objects/Anon_Object_Config__mdt/fields/External_ID_Field__c.field-meta.xml
<CustomField>
    <fullName>External_ID_Field__c</fullName>
    <label>External ID Field API Name</label>
    <description>API name of the field used as an external identifier in anonymization strategies (e.g. SAP_External_ID__c). Used by strategies like FIRST_LETTER_PLUS_EXTERNAL_ID and EMAIL_GENERIC.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>