force-app/main/default/objects/Anon_Object_Config__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <label>Is Active</label>
    <description>When false, this object is excluded from all anonymization runs. Use to temporarily suspend anonymization for an object without deleting the config.</description>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>