force-app/main/default/objects/Anon_Object_Config__mdt/fields/Is_Brand_Source__c.field-meta.xml
<CustomField>
    <fullName>Is_Brand_Source__c</fullName>
    <label>Is Brand Source</label>
    <description>Mark exactly one object config as the Brand Source. The LWC will query this object's Brand_Field_API_Name__c field for distinct values to populate the Brand filter dropdown. If none is flagged, the brand filter uses free-text input.</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>