force-app/main/default/objects/Anon_Object_Config__mdt/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <label>Object API Name</label>
    <description>Salesforce API name of the object to anonymize (e.g. Account, Contact, PersonAccount).</description>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>