force-app/main/default/objects/Anon_Object_Config__mdt/fields/Object_Label__c.field-meta.xml
<CustomField>
    <fullName>Object_Label__c</fullName>
    <label>Object Label</label>
    <description>Human-readable label shown in the LWC UI (e.g. "Person Account", "Contact").</description>
    <type>Text</type>
    <length>255</length>
</CustomField>