force-app/main/default/objects/Anon_Object_Config__mdt/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Processing Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>