force-app/main/default/objects/Anon_Object_Config__mdt/fields/Pattern_Type__c.field-meta.xml
<CustomField>
    <fullName>Pattern_Type__c</fullName>
    <label>Pattern Type (ref to Anon_Pattern__mdt)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>